# just_logger

./: .bumpversion.cfg  .gitignore  main.py  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: .pypi_release.yml
just_logger/: enums.py  logging.py
