[metadata]
name = just_logger
; description = A Django app with Base Entities used from different components.
; long_description = file: README.rst
; url = https://www.example.com/
author = Eduardo
author_email = duvrdx@gmail.com
; license = BSD-3-Clause  # Example license
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    python-dotenv >= 1.0.1
